# eXplainable-AI

./: .gitignore  .python-version  README.md
XAI Study/: README.md
XAI Study/Week01/: README.md
XAI Study/Week02/: README.md
XAI Study/Week03/: README.md
XAI Study/Week1/: README.md
competition/consumption_forecast/: LIME.ipynb  PDP.ipynb  pyproject.toml
competition/covid_audio/: .gitignore  Readme.md  main.py
competition/covid_audio/src/: auido_util.py  logger.py  model.py  preprocess.py  training.py
competition/hand_signal/: main.py  pyproject.toml
competition/hand_signal/src/: calculate.py  earlystopping.py  model.py  model2.py  preprocess.py
